chore(JacksonModule): fixed objectmapper for remote user access and checkstyle for workoutplannerModule and persistence
Co-authored-by: David Salguero Spilde <davidssp@stud.ntnu.no>