@@ -1,5 +1,6 @@
 package workoutplanner.ui;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -9,11 +10,11 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.time.LocalDate;
 import java.util.List;
-
 import workoutplanner.core.Exercise;
+import workoutplanner.core.User;
 import workoutplanner.core.Workout;
+import workoutplanner.json.WorkoutplannerPersistence;
 
 /**
  * Uses REST API to access and manipulate the user object.
@@ -23,23 +24,30 @@ public class RemoteUserAccess implements UserAccess {
 
   private final URI baseUrl;
 
-  public RemoteUserAccess(URI inputUrl) {
+  private final ObjectMapper objectMapper;
+
+  private static final int RESPONSE_CODE = 200;
+
+  public RemoteUserAccess(final URI inputUrl) {
     baseUrl = inputUrl;
+    objectMapper = WorkoutplannerPersistence.createObjectMapper();
   }
 
-  private Reader httpGetRequest(String path) throws IOException {
+  private Reader httpGetRequest(final String path) throws IOException {
     URI url = baseUrl.resolve(path);
-    HttpURLConnection connection = (HttpURLConnection) url.toURL().openConnection();
+    HttpURLConnection connection = (HttpURLConnection)
+            url.toURL().openConnection();
     connection.setRequestProperty("Accept", "application/json");
 
     InputStream responseStream = connection.getInputStream();
-    Reader reader = new InputStreamReader(responseStream, StandardCharsets.UTF_8);
-    return reader;
+    return new InputStreamReader(responseStream, StandardCharsets.UTF_8);
   }
 
-  private HttpURLConnection httpPutRequest(String path) throws IOException {
+  private HttpURLConnection httpPutRequest(final String path)
+          throws IOException {
     URI url = baseUrl.resolve(path);
-    HttpURLConnection connection = (HttpURLConnection) url.toURL().openConnection();
+    HttpURLConnection connection = (HttpURLConnection)
+            url.toURL().openConnection();
     connection.connect();
     connection.setDoOutput(true);
     connection.setRequestProperty("Content-Type", "application/json");
@@ -47,9 +55,11 @@ public class RemoteUserAccess implements UserAccess {
     return connection;
   }
 
-  private HttpURLConnection httpDeleteRequest(String path) throws IOException {
+  private HttpURLConnection httpDeleteRequest(final String path)
+          throws IOException {
     URI url = baseUrl.resolve(path);
-    HttpURLConnection connection = (HttpURLConnection) url.toURL().openConnection();
+    HttpURLConnection connection = (HttpURLConnection)
+            url.toURL().openConnection();
     connection.connect();
     connection.setDoOutput(true);
     connection.setRequestProperty("Content-Type", "application/json");
@@ -57,29 +67,29 @@ public class RemoteUserAccess implements UserAccess {
     return connection;
   }
 
-  private void checkResponseCode(HttpURLConnection connection) throws IOException {
-    if (connection.getResponseCode() != 200) {
+  private void checkResponseCode(final HttpURLConnection connection)
+          throws IOException {
+    if (connection.getResponseCode() != RESPONSE_CODE) {
       throw new IllegalArgumentException(connection.getResponseCode() + "");
     }
   }
 
   @Override
-  public Workout getCurrentWorkout() {
+  public Workout getCurrentWorkout() throws IOException {
     Reader reader = httpGetRequest("/current-workout");
-    Workout workout = Deserializer.deserializeWorkout(reader);
-    return workout;
+    return objectMapper.readValue(reader, Workout.class);
   }
 
   @Override
-  public List<Workout> getWorkouts() {
+  public List<Workout> getWorkouts() throws IOException {
     Reader reader = httpGetRequest("/workouts");
-    List<Workout> workouts = Deserializer.deserializeWorkouts(reader);
-    return workouts;
+    return objectMapper.readValue(reader, User.class).getWorkouts();
   }
 
   @Override
   public void setCurrentWorkout(final int workoutIndex) throws IOException {
-    HttpURLConnection connection = httpPutRequest("/current-workout/" + workoutIndex);
+    HttpURLConnection connection = httpPutRequest("/current-workout/"
+            + workoutIndex);
     checkResponseCode(connection);
   }
 
@@ -90,29 +100,33 @@ public class RemoteUserAccess implements UserAccess {
       final int repMax,
       final int weight) throws IOException {
     HttpURLConnection connection = httpPutRequest("/current-workout/exercise");
-    OutputStreamWriter writer = new OutputStreamWriter(connection.getOutputStream(), "UTF-8");
-    String json = Serializer.serializeExercise(new Exercise(inputName, sets, repMin, repMax, weight));
-    writer.write(json);
-    writer.flush();
-    writer.close();
+    OutputStreamWriter writer = new OutputStreamWriter(
+            connection.getOutputStream(), StandardCharsets.UTF_8);
+    objectMapper.writerWithDefaultPrettyPrinter().writeValue(writer,
+            new Exercise(inputName, sets, repMin, repMax, weight));
     checkResponseCode(connection);
-  };
+  }
 
   @Override
-  public void moveExerciseInCurrentWorkout(final int exerciseIndex, final boolean left) throws IOException {
-    HttpURLConnection connection = httpPutRequest("/current-workout/exercise/" + exerciseIndex + "?left=" + left);
+  public void moveExerciseInCurrentWorkout(final int exerciseIndex,
+                                           final boolean left)
+          throws IOException {
+    HttpURLConnection connection = httpPutRequest("/current-workout/exercise/"
+            + exerciseIndex + "?left=" + left);
     checkResponseCode(connection);
-  };
+  }
 
   @Override
   public void saveCurrentWorkout(final String name) throws IOException {
-    HttpURLConnection connection = httpPutRequest("/current-workout/save?name=" + URLEncoder.encode(name, "UTF-8"));
+    HttpURLConnection connection = httpPutRequest("/current-workout/save?name="
+            + URLEncoder.encode(name, StandardCharsets.UTF_8));
     checkResponseCode(connection);
   }
 
   @Override
   public void removeWorkout(final int workoutIndex) throws IOException {
-    HttpURLConnection connection = httpDeleteRequest("/workout/" + workoutIndex);
+    HttpURLConnection connection = httpDeleteRequest("/workout/"
+            + workoutIndex);
     checkResponseCode(connection);
   }
 
@@ -123,8 +137,10 @@ public class RemoteUserAccess implements UserAccess {
   }
 
   @Override
-  public void removeExerciseFromCurrentWorkout(final int exerciseIndex) throws IOException {
-    HttpURLConnection connection = httpDeleteRequest("/current-workout/exercise/" + exerciseIndex);
+  public void removeExerciseFromCurrentWorkout(final int exerciseIndex)
+          throws IOException {
+    HttpURLConnection connection =
+            httpDeleteRequest("/current-workout/exercise/" + exerciseIndex);
     checkResponseCode(connection);
-  };
+  }
 }
